crates/sverb-tui/src/snapshots/sverb_tui__testing__tests__confirm_quit_80x24.snap
---
source: crates/sverb-tui/src/testing.rs
expression: "h.render(80, 24)"
---
 sverb ─ Personal ▾ ────────────────────────────────────────────────────────────
 1 session 0 ┬ +                                                                
┌ Hosts ───────────────────────────────────────────────────────────────────────┐
│No hosts yet                                                                  │
│       a  add a host                                                          │
│    ^\ o  quick connect                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                      ┌ Quit ──────────────────────────┐                      │
│                      │Sessions are open. Quit sverb?  │                      │
│                      │                                │                      │
│                      │y quit · n / Esc cancel         │                      │
│                      └────────────────────────────────┘                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 NORMAL                                                      ^\ ? help · q quit
