crates/sverb-tui/src/snapshots/sverb_tui__testing__tests__initial_160x48.snap
---
source: crates/sverb-tui/src/testing.rs
expression: "h.render(160, 48)"
---
 sverb ─ Personal ▾ ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌──────────────┐ no sessions · ^\ o quick connect · ^\ v views/sessions                                                                                         
│▸ Hosts       │┌ Hosts ───────────────────────────────────────────────────────────────────────────────────────┐┌ Details ─────────────────────────────────────┐
│  Keychain    ││No hosts yet                                                                                  ││Nothing selected.                             │
│  Forwards    ││       a  add a host                                                                          ││                                              │
│  Snippets    ││    ^\ o  quick connect                                                                       ││                                              │
│  Known       ││                                                                                              ││                                              │
│  Logs        ││                                                                                              ││                                              │
│  Settings    ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
│              ││                                                                                              ││                                              │
└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
 NORMAL                                                                                                                                      ^\ ? help · q quit
