crates/sverb-tui/src/snapshots/sverb_tui__testing__tests__initial_80x24.snap
---
source: crates/sverb-tui/src/testing.rs
expression: "h.render(80, 24)"
---
 sverb ─ Personal ▾ ────────────────────────────────────────────────────────────
 no sessions · ^\ o quick connect · ^\ v views/sessions                         
┌ Hosts ───────────────────────────────────────────────────────────────────────┐
│No hosts yet                                                                  │
│       a  add a host                                                          │
│    ^\ o  quick connect                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 NORMAL                                                      ^\ ? help · q quit
